--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -156,6 +156,8 @@ set(PYBIND11_TEST_FILES
     test_tagbased_polymorphic
     test_thread
     test_union
+    test_unnamed_namespace_a
+    test_unnamed_namespace_b
     test_virtual_functions)
 
 # Invoking cmake with something like:
