Add test_named_namespace_a, test_named_namespace_b

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -142,6 +142,8 @@ set(PYBIND11_TEST_FILES
     test_methods_and_attributes
     test_modules
     test_multiple_inheritance
+    test_named_namespace_a.py
+    test_named_namespace_b.py
     test_numpy_array
     test_numpy_dtypes
     test_numpy_vectorize
@@ -221,6 +223,8 @@ tests_extra_targets("test_exceptions.py;test_local_bindings.py;test_stl.py;test_
 # And add additional targets for other tests.
 tests_extra_targets("test_exceptions.py" "cross_module_interleaved_error_already_set")
 tests_extra_targets("test_gil_scoped.py" "cross_module_gil_utils")
+tests_extra_targets("test_named_namespace_a.py" "named_namespace_a")
+tests_extra_targets("test_named_namespace_b.py" "named_namespace_b")
 
 set(PYBIND11_EIGEN_REPO
     "https://gitlab.com/libeigen/eigen.git"
