--- a/.github/workflows/windows_clang.yml
+++ b/.github/workflows/windows_clang.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         os: [windows-latest]
-        python: [3.10]
+        python: ['3.10']
 
     runs-on: '${{ matrix.os }}'
 
