--- a/.github/workflows/windows_clang.yml
+++ b/.github/workflows/windows_clang.yml
@@ -61,5 +61,11 @@ jobs:
       - name: Python tests Clang
         run: cmake --build . --target pytest -j 2
 
+      - name: C++ tests Clang
+        run: cmake --build . --target cpptest -j 2
+
+      - name: Interface test Clang
+        run: cmake --build . --target test_cmake_build -j 2
+
       - name: Clean directory
         run: git clean -fdx
