Mark cpptest as UNAVAILABLE
C:\hostedtoolcache\windows\cmake\3.25.0\x64\cmake-3.25.0-rc4-windows-x86_64\bin\cmake.exe -P D:\a\pybind11\pybind11\CMakeFiles\VerifyGlobs.cmake
ninja: error: unknown target 'cpptest', did you mean 'pytest'?
Error: Process completed with exit code 1.

--- a/.github/workflows/windows_clang.yml
+++ b/.github/workflows/windows_clang.yml
@@ -61,8 +61,7 @@ jobs:
       - name: Python tests Clang
         run: cmake --build . --target pytest -j 2
 
-      - name: C++ tests Clang
-        run: cmake --build . --target cpptest -j 2
+      # UNAVAILABLE: cpptest
 
       - name: Interface test Clang
         run: cmake --build . --target test_cmake_build -j 2
