--- a/.github/workflows/windows_clang.yml
+++ b/.github/workflows/windows_clang.yml
@@ -50,7 +50,7 @@ jobs:
           -DCMAKE_VERBOSE_MAKEFILE=ON
           -DPYBIND11_WERROR=OFF
           -DPYBIND11_SIMPLE_GIL_MANAGEMENT=OFF
-          -DDOWNLOAD_CATCH=OFF
+          -DDOWNLOAD_CATCH=ON
           -DDOWNLOAD_EIGEN=OFF
           -DCMAKE_CXX_COMPILER=clang++
           -DCMAKE_CXX_STANDARD=17
