--- a/.github/workflows/macos_brew_install_llvm.yml
+++ b/.github/workflows/macos_brew_install_llvm.yml
@@ -12,13 +12,11 @@ jobs:
 
     env:
       LDFLAGS: '-L/usr/local/opt/llvm/lib -Wl,-rpath,/usr/local/opt/llvm/lib'
+      PATH: "/usr/local/opt/llvm/bin:$PATH"
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
-      - name: Show Clang++ version /usr/local/opt/llvm/bin
-        run: PATH="/usr/local/opt/llvm/bin:$PATH" clang++ --version
 
       - name: Show env
         run: env
