--- a/.github/workflows/macos_brew_install_llvm.yml
+++ b/.github/workflows/macos_brew_install_llvm.yml
@@ -41,6 +41,7 @@ jobs:
           python3 -m pip install --upgrade pip
           python3 -m pip install -r tests/requirements.txt
           python3 -m pip install numpy
+          python3 -m pip install scipy
 
       - name: Show CMake version
         run: cmake --version
