--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1072,6 +1072,8 @@ jobs:
         run: |
           python3 -m pip install --upgrade pip
           python3 -m pip install -r tests/requirements.txt
+          python3 -m pip install numpy
+          python3 -m pip install scipy
 
       - name: Show CMake version
         run: cmake --version
