Squashed commit of the following:
commit 61c7699a0896decc50ee74429a8473606718c9aa
Author: Ethan Steinberg <ethan.steinberg@gmail.com>
Date:   Mon Nov 21 04:30:15 2022 +0000

    test it

commit 1e6b024b2a5f43bd3367afe190560a18a20feaaf
Author: Ethan Steinberg <ethan.steinberg@gmail.com>
Date:   Mon Oct 24 07:25:13 2022 +0000

    Shoot, forgot to disable test

commit e97060adcbcd0dc4a02643b0dceceee631ea139e
Author: Ethan Steinberg <ethan.steinberg@gmail.com>
Date:   Mon Oct 24 07:14:19 2022 +0000

    Final run before I break out the VMs

commit 1c0fb6dcaec0710a9e4932b898e21aa52680fdfd
Author: Ethan Steinberg <ethan.steinberg@gmail.com>
Date:   Mon Oct 24 06:46:54 2022 +0000

    Fix a bunch

commit 738fc7c1c027f3366f15a1cd18f8fe06e04beffc
Author: Ethan Steinberg <ethan.steinberg@gmail.com>
Date:   Mon Oct 24 06:14:27 2022 +0000

    Closer

commit 3c3b47698bec088b2c59c3286e5cdf5c6b4fa7ba
Author: Ethan Steinberg <ethan.steinberg@gmail.com>
Date:   Mon Oct 24 05:54:25 2022 +0000

    Silence

commit 794bcf4681b653794c6d619afb63c1899efdb1f6
Author: Ethan Steinberg <ethan.steinberg@gmail.com>
Date:   Mon Oct 24 05:35:41 2022 +0000

    Fix regex

commit 759e6a6d6e2fecb38b33a2a050a424b813acd8e9
Author: Ethan Steinberg <ethan.steinberg@gmail.com>
Date:   Mon Oct 24 05:26:33 2022 +0000

    OOps

commit e9d7f8ae5588c281c1433a80bada10b379298957
Author: Ethan Steinberg <ethan.steinberg@gmail.com>
Date:   Mon Oct 24 05:20:31 2022 +0000

    Next

commit 0cef232652d55d12aba8dfa9965e35c31073b675
Author: Ethan Steinberg <ethan.steinberg@gmail.com>
Date:   Mon Oct 24 04:58:47 2022 +0000

    Fix more warnings

commit 1d208766ef2f532599d69ca56f163fcbf678e783
Author: Ethan Steinberg <ethan.steinberg@gmail.com>
Date:   Mon Oct 24 04:48:28 2022 +0000

    Fix warnings

commit 81a6f821b0167e3af936e1fc239fa94ea4e4ba65
Author: Ethan Steinberg <ethan.steinberg@gmail.com>
Date:   Mon Oct 24 04:38:56 2022 +0000

    Fix issues

commit 6d44ec9af20633f52d7f1c9374011f6d20067ad1
Author: Ethan 

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ endforeach()
 if(PYBIND11_VERSION_PATCH MATCHES [[\.([a-zA-Z0-9]+)$]])
   set(pybind11_VERSION_TYPE "${CMAKE_MATCH_1}")
 endif()
+
 string(REGEX MATCH "^[0-9]+" PYBIND11_VERSION_PATCH "${PYBIND11_VERSION_PATCH}")
 
 project(
@@ -52,7 +53,7 @@ endif()
 
 # Check if pybind11 is being used directly or via add_subdirectory
 if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
-  ### Warn if not an out-of-source builds
+  # Warn if not an out-of-source builds
   if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_CURRENT_BINARY_DIR)
     set(lines
         "You are building in-place. If that is not what you intended to "
@@ -129,6 +130,10 @@ set(PYBIND11_HEADERS
     include/pybind11/eigen/matrix.h
     include/pybind11/eigen/tensor.h
     include/pybind11/embed.h
+    include/pybind11/detail/function_record.h
+    include/pybind11/detail/internal_pytypes.h
+    include/pybind11/detail/vendor/optional.h
+    include/pybind11/detail/python_compat.h
     include/pybind11/eval.h
     include/pybind11/gil.h
     include/pybind11/iostream.h
@@ -152,9 +157,11 @@ if(PYBIND11_MASTER_PROJECT AND NOT CMAKE_VERSION VERSION_LESS 3.12)
   set(_pybind11_disk_only ${_pybind11_header_check})
   list(REMOVE_ITEM _pybind11_here_only ${_pybind11_header_check})
   list(REMOVE_ITEM _pybind11_disk_only ${PYBIND11_HEADERS})
+
   if(_pybind11_here_only)
     message(AUTHOR_WARNING "PYBIND11_HEADERS has extra files:" ${_pybind11_here_only})
   endif()
+
   if(_pybind11_disk_only)
     message(AUTHOR_WARNING "PYBIND11_HEADERS is missing files:" ${_pybind11_disk_only})
   endif()
@@ -196,6 +203,7 @@ if(NOT TARGET pybind11_headers)
 
   target_compile_features(pybind11_headers INTERFACE cxx_inheriting_constructors cxx_user_literals
                                                      cxx_right_angle_brackets)
+
   if(NOT "${PYBIND11_INTERNALS_VERSION}" STREQUAL "")
     target_compile_definitions(
       pybind11_headers INTERFACE "PYBIND11_INTERNALS_VERSION=${PYBIND11_INTERNALS_VERSION}")
@@ -206,6 +214,7 @@ else()
 endif()
 
 include("${CMAKE_CURRENT_SOURCE_DIR}/tools/pybind11Common.cmake")
+
 # https://github.com/jtojnar/cmake-snips/#concatenating-paths-when-building-pkg-config-files
 # TODO: cmake 3.20 adds the cmake_path() function, which obsoletes this snippet
 include("${CMAKE_CURRENT_SOURCE_DIR}/tools/JoinPaths.cmake")
@@ -277,6 +286,7 @@ if(PYBIND11_INSTALL)
   if(NOT prefix_for_pc_file)
     set(prefix_for_pc_file "${CMAKE_INSTALL_PREFIX}")
   endif()
+
   join_paths(includedir_for_pc_file "\${prefix}" "${CMAKE_INSTALL_INCLUDEDIR}")
   configure_file("${CMAKE_CURRENT_SOURCE_DIR}/tools/pybind11.pc.in"
                  "${CMAKE_CURRENT_BINARY_DIR}/pybind11.pc" @ONLY)
