Content of PR #4374 applied on top of smart_holder branch.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -158,6 +158,7 @@ set(PYBIND11_TEST_FILES
     test_kwargs_and_defaults
     test_local_bindings
     test_methods_and_attributes
+    test_mi_debug
     test_modules
     test_multiple_inheritance
     test_numpy_array
