--- a/.github/workflows/configure.yml
+++ b/.github/workflows/configure.yml
@@ -16,12 +16,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        runs-on: [ubuntu-20.04, macos-latest, windows-latest]
+        runs-on: [ubuntu-latest, macos-latest, windows-latest]
         arch: [x64]
         cmake: ["3.23"]
 
         include:
-        - runs-on: ubuntu-20.04
+        - runs-on: ubuntu-latest
           arch: x64
           cmake: 3.4
 
