--- a/.github/workflows/python312.yml
+++ b/.github/workflows/python312.yml
@@ -38,8 +38,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install --prefer-binary -r tests/requirements.txt
-        python -m pip install --prefer-binary numpy
-    #   python -m pip install --prefer-binary scipy
+    #   python -m pip install --prefer-binary numpy  # SLOW
+    #   python -m pip install --prefer-binary scipy  # FAILED ~Nov 2022
 
     - name: Show platform info
       run: python -m platform
@@ -64,11 +64,11 @@ jobs:
     - name: Python tests C++11
       run: cmake --build build11 --target pytest -j 2
 
-    - name: C++ tests C++11
-      run: cmake --build build11 --target cpptest -j 2
+    # - name: C++ tests C++11
+    #   run: cmake --build build11 --target cpptest -j 2
 
-    - name: Interface test C++11
-      run: cmake --build build11 --target test_cmake_build
+    # - name: Interface test C++11
+    #   run: cmake --build build11 --target test_cmake_build
 
     - name: Clean directory
       run: git clean -fdx
@@ -90,11 +90,11 @@ jobs:
     - name: Python tests C++17
       run: cmake --build build17 --target pytest
 
-    - name: C++ tests C++17
-      run: cmake --build build17 --target cpptest
+    # - name: C++ tests C++17
+    #   run: cmake --build build17 --target cpptest
 
-    - name: Interface test C++17
-      run: cmake --build build17 --target test_cmake_build
+    # - name: Interface test C++17
+    #   run: cmake --build build17 --target test_cmake_build
 
     - name: Clean directory
       run: git clean -fdx
@@ -117,11 +117,11 @@ jobs:
     - name: Python tests C++17 max DPYBIND11_INTERNALS_VERSION
       run: cmake --build build17max --target pytest
 
-    - name: C++ tests C++17 max DPYBIND11_INTERNALS_VERSION
-      run: cmake --build build17max --target cpptest
+    # - name: C++ tests C++17 max DPYBIND11_INTERNALS_VERSION
+    #   run: cmake --build build17max --target cpptest
 
-    - name: Interface test C++17 max DPYBIND11_INTERNALS_VERSION
-      run: cmake --build build17max --target test_cmake_build
+    # - name: Interface test C++17 max DPYBIND11_INTERNALS_VERSION
+    #   run: cmake --build build17max --target test_cmake_build
 
     # Ensure the setup_helpers module can build packages using setuptools
     - name: Setuptools helpers test
