Go back to CMake 3.25.2

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,6 +84,9 @@ jobs:
 
     - name: Update CMake
       uses: jwlawson/actions-setup-cmake@v1.13
+      # TEMPORARILY pin version because 3.26.0-rc1 is failing under macOS:
+      with:
+        cmake-version: '3.25.2'
 
     - name: Cache wheels
       if: runner.os == 'macOS'
@@ -1072,6 +1075,9 @@ jobs:
 
       - name: Update CMake
         uses: jwlawson/actions-setup-cmake@v1.13
+        # TEMPORARILY pin version because 3.26.0-rc1 is failing under macOS:
+        with:
+          cmake-version: '3.25.2'
 
       - name: Run pip installs
         run: |
