--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,10 +76,11 @@ select = [
   "YTT",         # flake8-2020
 ]
 ignore = [
-  "PLR2004", "PLR0913",
+  "PLR",   # Design related pylint
   "E501",  # Line too long (Black is enough)
   "PT011", # Too broad with raises in pytest
   "PT004", # Fixture that doesn't return needs underscore (no, it is fine)
+  "SIM118",# iter(x) is not always the same as iter(x.keys())
 ]
 target-version = "py37"
 typing-modules = ["scikit_build_core._compat.typing"]
