--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,3 +92,4 @@ isort.known-first-party = ["env", "pybind11_cross_module_tests", "pybind11_tests
 
 [tool.ruff.per-file-ignores]
 "tests/**" = ["EM"]
+"tests/test_enum.py" = ["SIM201", "SIM300", "SIM202"]
